testcase/istio-smoke/manifests/injection-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pilotwave-istio-injection-smoke
  labels:
    istio-injection: enabled
