testcase/istio-smoke/manifests/route-v2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello
  namespace: pilotwave-istio-smoke
spec:
  hosts:
    - smoke.pilotwave.local
  gateways:
    - hello-gateway
  http:
    - name: route-to-v2
      route:
        - destination:
            host: hello.pilotwave-istio-smoke.svc.cluster.local
            subset: v2
            port:
              number: 80
          weight: 100
