testcase/istio-smoke/manifests/weighted-v2-75-v1-25.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello
  namespace: pilotwave-istio-smoke
spec:
  hosts:
    - smoke.pilotwave.local
  gateways:
    - hello-gateway
  http:
    - name: route-v2-75-v1-25
      route:
        - destination:
            host: hello.pilotwave-istio-smoke.svc.cluster.local
            subset: v2
            port:
              number: 80
          weight: 75
        - destination:
            host: hello.pilotwave-istio-smoke.svc.cluster.local
            subset: v1
            port:
              number: 80
          weight: 25
