testcase/istio-smoke/manifests/requestauth-require-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: pilotwave-istio-smoke-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    - issuer: testing@pilotwave
      jwksUri: https://raw.githubusercontent.com/istio/istio/release-1.7/security/tools/jwt/samples/jwks.json
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: pilotwave-istio-smoke-require-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
    - to:
        - operation:
            hosts:
              - smoke.pilotwave.local
            paths:
              - /jwt
      from:
        - source:
            notRequestPrincipals:
              - testing@pilotwave/*
